--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     }
   ],
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Yishak Abrham Nibretu",
+    "email": "yishakabrham621@gmail.com"
+  },
   "license": "ISC",
   "devDependencies": {
     "electron": "^32.0.1",
