--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,84 @@
+# name: Build Electron App
+# env:
+#   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
+
+# jobs:
+#   build-windows:
+#     runs-on: windows-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '20'
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Build the app for Windows
+#         run: npm run build -- --win
+
+#       - name: Upload Windows Artifacts
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: windows-artifact
+#           path: dist/**/* # Adjust this to your actual output directory
+
+#   build-macos:
+#     runs-on: macos-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '20'
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Build the app for macOS
+#         run: npm run build -- --mac
+
+#       - name: Upload macOS Artifacts
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: macos-artifact
+#           path: dist/**/* # Adjust this to your actual output directory
+
+#   build-linux:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '20'
+
+#       - name: Install dependencies
+#         run: npm install
+
+#       - name: Build the app for Linux
+#         run: npm run build -- --linux
+
+#       - name: Upload Linux Artifacts
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: linux-artifact
+#           path: dist/**/* # Adjust this to your actual output directory
+
 name: Build Electron App
-env: 
+env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 on:
   push:
@@ -13,68 +92,108 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          
+          node-version: "20"
+
       - name: Install dependencies
         run: npm install
-        
+
       - name: Build the app for Windows
         run: npm run build -- --win
 
       - name: Upload Windows Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: windows-artifact
-          path: dist/**/* # Adjust this to your actual output directory
+          path: dist/**/*
 
   build-macos:
     runs-on: macos-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          
+          node-version: "20"
+
       - name: Install dependencies
         run: npm install
-        
+
       - name: Build the app for macOS
         run: npm run build -- --mac
 
       - name: Upload macOS Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: macos-artifact
-          path: dist/**/* # Adjust this to your actual output directory
+          path: dist/**/*
 
   build-linux:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          
+          node-version: "20"
+
       - name: Install dependencies
         run: npm install
-        
+
       - name: Build the app for Linux
         run: npm run build -- --linux
 
       - name: Upload Linux Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: linux-artifact
-          path: dist/**/* # Adjust this to your actual output directory
+          path: dist/**/*
 
+  create-release:
+    needs: [build-windows, build-macos, build-linux]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: v1.0.4
+          release_name: Release v1.0.4
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Upload Windows Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/**/*-win.exe # Adjust based on your output filename pattern
+          asset_name: hifiles-windows-installer.exe
+          asset_content_type: application/octet-stream
+
+      - name: Upload macOS Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/**/*-mac.dmg # Adjust based on your output filename pattern
+          asset_name: hifiles-macos-installer.dmg
+          asset_content_type: application/octet-stream
+
+      - name: Upload Linux Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/**/*-linux.AppImage # Adjust based on your output filename pattern
+          asset_name: hifiles-linux-installer.AppImage
+          asset_content_type: application/octet-stream
