--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@
 #           name: linux-artifact
 #           path: dist/**/* # Adjust this to your actual output directory
 
-name: Build Electron App
+name: Hifiles Desktop App
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 on:
@@ -179,7 +179,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/**/*-win.exe # Adjust based on your output filename pattern
-          asset_name: hifiles-windows-installer.exe
+          asset_name: hifiles-setup-windows-1.0.4.exe
           asset_content_type: application/octet-stream
 
       - name: Upload macOS Artifact to Release
@@ -187,7 +187,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/**/*-mac.dmg # Adjust based on your output filename pattern
-          asset_name: hifiles-macos-installer.dmg
+          asset_name: hifiles-setup-macos-1.0.4.dmg
           asset_content_type: application/octet-stream
 
       - name: Upload Linux Artifact to Release
@@ -195,5 +195,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/**/*-linux.AppImage # Adjust based on your output filename pattern
-          asset_name: hifiles-linux-installer.AppImage
+          asset_name: hifiles-setup-linux-1.0.4.AppImage
           asset_content_type: application/octet-stream
