--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,22 +178,22 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/**/*-win.exe # Adjust based on your output filename pattern
-          asset_name: hifiles-setup-windows-1.0.4.exe
+          asset_path: dist/hifiles desktop app-1.0.5-x64.exe
+          asset_name: hifiles-setup-windows-1.0.5.exe
           asset_content_type: application/octet-stream
 
       - name: Upload macOS Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/**/*-mac.dmg # Adjust based on your output filename pattern
-          asset_name: hifiles-setup-macos-1.0.4.dmg
+          asset_path: dist/hifiles desktop app-1.0.5.dmg
+          asset_name: hifiles-setup-macos-1.0.5.dmg
           asset_content_type: application/octet-stream
 
       - name: Upload Linux Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/**/*-linux.AppImage # Adjust based on your output filename pattern
-          asset_name: hifiles-setup-linux-1.0.4.AppImage
+          asset_path: dist/hifiles desktop app-1.0.5-x86_64.AppImage
+          asset_name: hifiles-setup-linux-1.0.5.AppImage
           asset_content_type: application/octet-stream
