--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,7 +178,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles desktop app-1.0.6-x64.exe
+          asset_path: dist/hifiles-desktop-app-Setup-1.0.6.exe
           asset_name: hifiles-setup-windows-1.0.6.exe
           asset_content_type: application/octet-stream
 
@@ -186,7 +186,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles desktop app-1.0.6.dmg
+          asset_path: dist/hifiles-desktop-app-1.0.6-arm64.dmg
           asset_name: hifiles-setup-macos-1.0.6.dmg
           asset_content_type: application/octet-stream
 
@@ -194,6 +194,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles desktop app-1.0.6-x86_64.AppImage
-          asset_name: hifiles-setup-linux-1.0.6.AppImage
+          asset_path: dist/hifiles-desktop-app-1.0.6-amd64.deb
+          asset_name: hifiles-setup-linux-1.0.6.deb
           asset_content_type: application/octet-stream
