--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,7 +105,7 @@ jobs:
         run: npm run build -- --win
 
       - name: List files in dist directory
-        run: ls -al dist
+        run: dir dist
 
       - name: Upload Windows Artifacts
         uses: actions/upload-artifact@v4
@@ -187,7 +187,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles-desktop-app-Setup-1.0.9.exe
+          asset_path: dist/hifiles desktop app-1.0.9.exe
           asset_name: hifiles-setup-windows-1.0.9.exe
           asset_content_type: application/octet-stream
 
@@ -195,7 +195,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles-desktop-app-1.0.9-arm64.dmg
+          asset_path: dist/hifiles desktop app-1.0.9-arm64.dmg
           asset_name: hifiles-setup-macos-1.0.9.dmg
           asset_content_type: application/octet-stream
 
@@ -203,6 +203,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles-desktop-app-1.0.9-amd64.deb
+          asset_path: dist/hifiles desktop app-1.0.9-amd64.deb
           asset_name: hifiles-setup-linux-1.0.9.deb
           asset_content_type: application/octet-stream
