--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,7 +187,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles desktop app-1.0.9.exe
+          asset_path: dist/hifiles desktop app Setup 1.0.9.exe
           asset_name: hifiles-setup-windows-1.0.9.exe
           asset_content_type: application/octet-stream
 
