--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -176,33 +176,33 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: v1.0.12
-          release_name: Release v1.0.12
+          tag_name: v1.0.13
+          release_name: Release v1.0.13
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Upload Windows Artifact to Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles-desktop-app-Setup-1.0.12.exe
-          asset_name: hifiles-setup-windows-1.0.12.exe
-          asset_content_type: application/octet-stream
+      # - name: Upload Windows Artifact to Release
+      #   uses: actions/upload-release-asset@v1
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: dist/hifiles-desktop-app Setup 1.0.13.exe
+      #     asset_name: hifiles-setup-windows-1.0.13.exe
+      #     asset_content_type: application/octet-stream
 
       - name: Upload macOS Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles-desktop-app-1.0.12-arm64.dmg
-          asset_name: hifiles-setup-macos-1.0.12.dmg
+          asset_path: dist/hifiles-desktop-app-1.0.13-arm64.dmg
+          asset_name: hifiles-setup-macos-1.0.13.dmg
           asset_content_type: application/octet-stream
 
       - name: Upload Linux Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/hifiles-desktop-app-1.0.12-amd64.deb
-          asset_name: hifiles-setup-linux-1.0.12.deb
+          asset_path: dist/hifiles-desktop-app-1.0.13-amd64.deb
+          asset_name: hifiles-setup-linux-1.0.13.deb
           asset_content_type: application/octet-stream
