--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -329,7 +329,7 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: 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
+          GITHUB_TOKEN: ${{ secrets.GH_RELEASE }}
 
       - name: Upload Windows Artifact to Release
         uses: actions/upload-release-asset@v1
