--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -209,7 +209,7 @@
 
 name: Hifiles Desktop App
 env:
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
 on:
   push:
     branches:
@@ -328,8 +328,6 @@ jobs:
           release_name: Release v1.0.16
           draft: false
           prerelease: false
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Windows Artifact to Release
         uses: actions/upload-release-asset@v1
