--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -328,7 +328,8 @@ jobs:
           release_name: Release v1.0.16
           draft: false
           prerelease: false
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Windows Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
