--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Hifiles Desktop App
 env:
-  GH_TOKEN: ${{ secrets. GAALO }}
+  GH_TOKEN: ${{ secrets.GAALO }}
 on:
   push:
     branches:
@@ -90,7 +90,7 @@ jobs:
     needs: [build-windows, build-macos, build-linux]
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GAALO }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
