--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 name: Hifiles Desktop App
+
 env:
   GH_TOKEN: ${{ secrets.GAALO }}
+
 on:
   push:
     branches:
@@ -74,8 +76,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build the app for Linux
-        run: npm run build -- --linux
+      - name: Build the app for Linux (DEB, RPM, AppImage)
+        run: |
+          npm run build -- --linux --deb
+          npm run build -- --linux --rpm
+          npm run build -- --linux --appimage
 
       - name: List files in dist directory
         run: ls -al dist
@@ -83,7 +88,7 @@ jobs:
       - name: Upload Linux Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: linux-artifact
+          name: linux-artifacts
           path: dist/**/*
 
   create-release:
@@ -107,10 +112,10 @@ jobs:
           name: macos-artifact
           path: dist
 
-      - name: Download Linux Artifact
+      - name: Download Linux Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: linux-artifact
+          name: linux-artifacts
           path: dist
 
       - name: Create Release
@@ -138,10 +143,26 @@ jobs:
           asset_name: hifiles-setup-macos-1.1.5.dmg
           asset_content_type: application/octet-stream
 
-      - name: Upload Linux Artifact to Release
+      - name: Upload .deb Linux Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/hifiles-desktop-app-1.1.5.deb
           asset_name: hifiles-setup-linux-1.1.5.deb
+          asset_content_type: application/octet-stream
+
+      - name: Upload .rpm Linux Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/hifiles-desktop-app-1.1.5.rpm
+          asset_name: hifiles-setup-linux-1.1.5.rpm
+          asset_content_type: application/octet-stream
+
+      - name: Upload AppImage Linux Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/hifiles-desktop-app-1.1.5.AppImage
+          asset_name: hifiles-setup-linux-1.1.5.AppImage
           asset_content_type: application/octet-stream
